modal window filled with info from object; to be changed: prevent modal picture stretching

--- a/css/style.scss
+++ b/css/style.scss
@@ -232,6 +232,7 @@ main {
       font-weight: 800;
       text-align: center;
       color: $captionTxt;
+      text-transform: uppercase;
     }
 }
 
@@ -307,6 +308,8 @@ main {
     line-height: 200%;
     overflow-y: auto;
     width: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
   }
   button {
     width: 160px;
